[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcane-sdk"
version = "0.1.0"
description = "Official SDK for the Arcane public API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/arcane_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"
